[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deepcsv"
version = "0.6.8"
authors = [
    { name = "Abdullah Bakr", email = "abdubakora1232@gmail.com" }
]
description = "Automatically processes data files in directories, converts array-like strings to NumPy arrays, detects and fixes data type issues, and saves results as optimized Parquet files and MORE!"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
keywords = ["data-processing", "pandas", "numpy", "etl", "data-cleaning", "file-conversion", "automation", "parquet", "bulk-conversion"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas",
    "pyarrow",
    "requests",
]

[project.urls]
Homepage   = "https://github.com/abdubakr77/deepcsv"
Source     = "https://github.com/abdubakr77/deepcsv"
Tracker    = "https://github.com/abdubakr77/deepcsv/issues"
Changelog  = "https://github.com/abdubakr77/deepcsv/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
