[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepcsv"
version = "0.7.0b1"
authors = [
    { name = "Abdullah Bakr", email = "abdubakora1232@gmail.com" }
]
description = "Automatically processes data files in directories, converts array-like strings to NumPy arrays, detects and fixes data type issues, and saves results as optimized Parquet files and MORE!"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
keywords = ["data-processing", "pandas", "numpy", "etl", "data-cleaning", "file-conversion", "automation", "parquet", "bulk-conversion"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "pyarrow",
    "requests",
]

[project.urls]
Homepage   = "https://github.com/abdubakr77/deepcsv"
Source     = "https://github.com/abdubakr77/deepcsv"
Tracker    = "https://github.com/abdubakr77/deepcsv/issues"
Changelog  = "https://github.com/abdubakr77/deepcsv/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
